--- a/docroot/themes/custom/bos311bootstrap/scss/style.scss
+++ b/docroot/themes/custom/bos311bootstrap/scss/style.scss
@@ -4,7 +4,7 @@
 // Include parent theme with all things Bootstrap for full override.
 // Relative path to this styles.scss file.
 // Example: @import "../../../../../themes/contrib/bootstrap4/scss/style";
-@import "[DOCROOT]/themes/contrib/bootstrap4/scss/style";
+@import "../../../../themes/contrib/bootstrap4/scss/style";
 
 // OR test new Bootstrap 4.5.0
 //@import "[DOCROOT]/themes/contrib/bootstrap4/scss/style-4-5-0";
@@ -15,3 +15,8 @@
 // Include custom sub theme.
 //@import 'custom/mixins/misc';
 //@import 'custom/misc';
+
+.datetime-label {
+  clear: both;
+  display: block;
+}
