--- a/docroot/themes/custom/bos311bootstrap/css/style.css
+++ b/docroot/themes/custom/bos311bootstrap/css/style.css
@@ -10282,9 +10282,18 @@ a.tabledrag-handle .handle {
   display: block;
 }
 
+@media (min-width: 576px) {
+  .card-img-top {
+    height: 200px;
+  }
+}
+@media (min-width: 768px) {
+  .card-img-top {
+    height: 280px;
+  }
+}
 .card-img-top {
   width: 100%;
-  height: 15vw;
   object-fit: cover;
 }
 
