No protocol for ifram source

--- a/docroot/themes/custom/bos311bootstrap/templates/node--report--full.html.twig
+++ b/docroot/themes/custom/bos311bootstrap/templates/node--report--full.html.twig
@@ -91,7 +91,7 @@
         <li class="list-group-item">{{ content.field_description }}</li>
         <li class="list-group-item">{{ content.field_address }}</li>
         <li class="list-group-item">
-          <iframe height="350" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openlinkmap.org/small.php?lat={{ content.field_latitude.0 }}&lon={{ content.field_longitude.0 }}&zoom=17"></iframe>
+          <iframe height="350" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="//www.openlinkmap.org/small.php?lat={{ content.field_latitude.0 }}&lon={{ content.field_longitude.0 }}&zoom=17"></iframe>
         </li>
       </ul>
     </div>
